fix(candidates): forgotten name value pair for a reserve button (#17)

--- a/app/views/ats/placements/_placement.html.slim
+++ b/app/views/ats/placements/_placement.html.slim
@@ -72,6 +72,8 @@ ruby:
                                   variant: :custom,
                                   class: "dropdown-item",
                                   flex_content_position: :start,
+                                  name: :status,
+                                  value: :reserved,
                                 ) do |c|
                          - c.with_icon(:clock, size: c.size, position: :left)
                          | Reserve
