--- a/app/views/layouts/ats/application.html.slim
+++ b/app/views/layouts/ats/application.html.slim
@@ -26,6 +26,13 @@ html
     = stylesheet_link_tag "ats", media: "all", "data-turbo-track": "reload"
     = javascript_include_tag "ats", "data-turbo-track": "reload"
     = javascript_include_tag "https://www.gstatic.com/charts/loader.js"
+    - if ApplicationController::CLARITY_KEY.present?
+      javascript:
+        (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script",  "#{ApplicationController::CLARITY_KEY}");
     - if !rodauth.logged_in? && RecaptchaV3::ENABLED
       = javascript_include_tag "recaptcha"
       - onload = "&onload=onGrecaptchaLoad"
