feat: added recaptcha message (#104)
* feat: added recaptcha message

* refact: Updated css styles

* refact: used _html suffix for locale key

--- a/app/views/career_site/positions/show.html.slim
+++ b/app/views/career_site/positions/show.html.slim
@@ -66,3 +66,4 @@
           size: :medium,
           class: "flex-grow-1 flex-lg-grow-0 mt-2" \
         ).with_content(t("career_site.positions.submit_application"))
+      .mt-2.font-small.text-gray-600 = t("recaptcha.privacy_message_html")
