--- a/app/assets/stylesheets/src/career_site/_main.scss
+++ b/app/assets/stylesheets/src/career_site/_main.scss
@@ -15,7 +15,12 @@ body {
   min-height: calc(100% - #{$footer-min-height});
 }
 
-#back_on_all_positions {
+.grecaptcha-badge {
+  visibility: hidden !important;
+}
+
+#back_on_all_positions a,
+#application_form a {
   color: $blue-500;
 }
 
