feat(ui): Hidden recaptcha badge on register page (#153)

--- a/app/assets/stylesheets/src/ats/_recaptcha.scss
+++ b/app/assets/stylesheets/src/ats/_recaptcha.scss
@@ -7,3 +7,9 @@
     width: inherit;
   }
 }
+
+.grecaptcha-badge {
+  // Do not use display: none; as it appears to disable the spam checking functionality.
+  // https://stackoverflow.com/questions/44543157/how-to-hide-the-google-invisible-recaptcha-badge
+  visibility: hidden !important;
+}
